Some fixes for IE
- Sidebar nav behavior
- Wide layout bug on Effective Forms

--- a/assets/css/design-manual.css
+++ b/assets/css/design-manual.css
@@ -13026,8 +13026,6 @@ ul.list_links-minicons li {
 .secondary-nav a {
   display: block;
   padding: 10px;
-  -webkit-transition: .4s;
-  transition: .4s;
 }
 .secondary-nav a,
 .secondary-nav a:link,
@@ -13035,20 +13033,20 @@ ul.list_links-minicons li {
   border-bottom: none;
   color: #101820;
 }
-.secondary-nav li:hover,
+.secondary-nav a:hover,
 .secondary-nav a:focus,
-.secondary-nav li:active,
-.secondary-nav .secondary-nav-active {
-  color: #101820;
+.secondary-nav .secondary-nav-active > a {
   border-left: 4px solid #2cb34a;
-  background-color: transparent;
-  border-bottom: 1px solid #babbbd;
-  padding-left: 0;
+  margin-left: -4px;
+  color: #101820;
+}
+.secondary-nav a:active {
+  background-color: #f8f8f8;
+  color: #101820;
 }
 .secondary-nav ul {
   margin: 0;
   padding: 0;
-  /*border-top: 1px solid @gray-50;*/
 }
 .secondary-nav li {
   list-style: none;
